Revision history for Dist-Zilla-Plugin-DynamicPrereqs

{{$NEXT}}

0.030     2016-07-02 06:34:54Z
          - fixed a test that fails with newer ModuleIncluder, that changed
            the text of an error message

0.029     2016-05-06 19:40:13Z
          - temporarily work around Module::CoreList::is_core issue exposed by
            include_dependencies feature used in
            Dist::Zilla::Role::ModuleIncluder 0.005 and later

0.028     2016-05-05 00:53:13Z
          - fix test failure with MSWin32 path separators

0.027     2016-05-03 00:42:24Z (TRIAL RELEASE)
          - bundled an updated ExtUtils::HasCompiler for can_xs(), to support
            building with a noexec $TMPDIR.

0.026     2016-04-22 09:54:05Z (TRIAL RELEASE)
          - bump version of [MakeMaker::Awesome] needed for optional tests, to
            skip past some problematic changes to Makefile.PL whitespace

0.025     2016-04-21 15:18:58Z (TRIAL RELEASE)
          - bumped up "background perl" used in ExtUtils::HasCompiler
            inlining, to avoid inlining File::Temp and its dependencies

0.024     2016-04-21 11:07:53Z (TRIAL RELEASE)
          - can_xs() is now implemented with ExtUtils::HasCompiler, rather
            than ExtUtils::CBuilder
          - new helper sub: want_pp, for use with can_xs

0.023     2016-04-21 10:44:21Z
          - really fix all remaining tests that require newer MakeMaker
            behaviour

0.022     2016-04-18 21:08:47Z
          - fix test that was written assuming older MakeMaker behaviour

0.021     2016-03-16 20:50:11Z (TRIAL RELEASE)
          - optimize use of blank lines in modified Makefile.PL content

0.020     2016-03-16 02:42:30Z (TRIAL RELEASE)
          - perform Makefile.PL content modification at the proper time (as a
            FileMunger, rather than InstallTool)

0.019     2016-01-20 04:43:24Z
          - perl prerequisite lowered to 5.8 (Graham Ollis)

0.018     2015-12-02 03:40:03Z